--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button{
     margin: 20px 10px;
     border-radius: 25px;
     font-weight: bold;
-    border: 2px solid #009688;
+    border: 0px solid #009688;
     background: transparent;
     color: #fff;
     cursor: pointer;
@@ -94,6 +94,7 @@ button:hover span{
 button:hover{
     border: none;
     background: #009688;
+    border-radius: 25px;
 }
 
 .top{
